# grid

./: pyproject.toml  requirements.txt
grid/: __init__.py  err.py
grid/mods/: builds.py  comps.py  helper.py  models.py
